--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Jatin's E-store</title>
 </head>
-
+    
 <body>
     <nav id="nav">
         <div class="navTop">
@@ -31,7 +31,7 @@
         <div class="navBottom">
             <h3 class="menuItem">AIR FORCE</h3>
             <h3 class="menuItem">JORDAN</h3>
-            <h3 class="menuItem">BLAZER</h3>
+            <h3 class="menuItem">Bacca Bucci</h3>
             <h3 class="menuItem">CRATER</h3>
             <h3 class="menuItem">HIPPIE</h3>
         </div>
